# bullbear-dashboard

./: README.md  README_START.md  start.bat  stop.bat  test_api.py  test_connection.py
.github/: DEPLOYMENT.md  ENVIRONMENT_SETUP.md  QUICK_START.md
.github/workflows/: deploy-pages.yml  fetch-data.yml
backend/: README.md  env.example  pyproject.toml
backend/bullbear_backend/: main.py
backend/bullbear_backend/data/: fetcher.py  types.py
backend/bullbear_backend/data/providers/: __init__.py  coingecko.py  farside.py
backend/bullbear_backend/data/sources/: __init__.py  btc_price.py  etf_aum.py  etf_net_flow.py  ma.py  stablecoin_market_cap.py  total_market_cap.py
backend/bullbear_backend/state_machine/: __init__.py  engine.py  types.py
backend/scripts/: fetch_and_save_data.py
docs/: CONTRIBUTING.md  QUICK_START.md  codelogic.md  videologic.md
frontend/: LOCAL_TEST.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/data/: .gitkeep  all_data.json  btc_price.json  etf_aum.json  etf_net_flow.json  ma200.json  ma50.json  stablecoin_market_cap.json  state.json  total_market_cap.json
frontend/public/docs/: STATE_MACHINE_LOGIC.md
frontend/src/: App.vue  types.ts
frontend/src/components/: TradingViewChart.vue
