[tool.poetry]
name = "bullbear-backend"
version = "0.1.0"
description = "Backend API for the Bitcoin Crypto Market State Machine risk gauge."
authors = ["BullBear Dashboard Contributors"]
readme = "README.md"
packages = [{ include = "bullbear_backend" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = { version = "^0.32.1", extras = ["standard"] }
requests = "^2.32.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
lxml = "^5.3.0"
html5lib = "^1.1"
cloudscraper = "^1.2.71"
yfinance = "^0.2.40"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.4"
ipython = "^9.8.0"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


